# worktree-tmux-manager

./: .gitignore  CLAUDE.md  ISSUES.md  README.md  main.py  pyproject.toml  skills-lock.json  styles.tcss
.claude/: settings.json
.claude/hooks/: format-python.sh
.claude/skills/workon/: SKILL.md
docs/: ARCHITECTURE.md
modules/: __init__.py  app.py
modules/core/: __init__.py  config.py  mapping.py  state.py  validation.py
modules/git/: __init__.py  models.py  operations.py
modules/github/: __init__.py  cache.py  client.py  models.py
modules/linear/: __init__.py  cache.py  client.py  models.py
modules/modals/: __init__.py  add_worktree.py  remove_worktree.py  rename_worktree.py
modules/screens/: __init__.py  help_overlay.py  project_picker.py  project_setup.py  settings.py  worktree_list.py
modules/screens/wizard/: __init__.py  base_step.py  controller.py  github_step.py  linear_step.py  project_step.py  summary_step.py  welcome_step.py
modules/tmux/: operations.py
modules/widgets/: __init__.py  directory_input.py  secret_input.py  vim_data_table.py
tests/: conftest.py
tests/unit/: test_app.py  test_init.py
tests/unit/core/: test_config.py  test_mapping.py  test_state.py  test_validation.py
tests/unit/git/: test_models.py  test_operations.py
tests/unit/github/: test_cache.py  test_client.py  test_models.py
tests/unit/linear/: test_cache.py  test_client.py  test_models.py
tests/unit/modals/: conftest.py  test_add_worktree.py  test_init.py  test_remove_worktree.py  test_rename_worktree.py
tests/unit/screens/: conftest.py  test_help_overlay.py  test_init.py  test_project_picker.py  test_project_setup.py  test_settings.py  test_worktree_list.py
tests/unit/screens/wizard/: test_controller.py  test_github_step.py  test_linear_step.py  test_project_step.py  test_summary_step.py  test_welcome_step.py
tests/unit/tmux/: conftest.py  test_init.py  test_models.py  test_operations.py
tests/unit/widgets/: conftest.py  test_directory_input.py  test_init.py  test_search_bar.py  test_secret_input.py  test_vim_data_table.py
tt_tmux/: __init__.py  app.py
tt_tmux/git/: operations.py
tt_tmux/modals/: add_worktree.py  remove_worktree.py  rename_worktree.py
tt_tmux/screens/: __init__.py  help_overlay.py  worktree_list.py
tt_tmux/tmux/: __init__.py  models.py  operations.py
tt_tmux/widgets/: __init__.py  search_bar.py  vim_data_table.py
