[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tt-tmux"
version = "0.1.0"
description = "A Textual TUI for managing Git worktrees with tmux integration"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40",
    "textual-autocomplete>=4.0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short -q"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["modules"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
