[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tt-tmux"
version = "0.1.0"
description = "A Textual TUI for managing Git worktrees with tmux integration"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40",
    "textual-autocomplete>=4.0.6",
    "tomli-w>=1.0",
    "gql[httpx]>=3.5",
    "httpx>=0.27",
    "PyGithub>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short -q -n auto --dist worksteal"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["modules"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python 3.11+ syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "RUF012",  # Textual uses mutable class attributes (BINDINGS, CSS_PATH) by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["SIM117"]  # allow nested with statements in tests for readability

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
